including subset data in filecounts

--- a/finding-image-file-sizes.ipynb
+++ b/finding-image-file-sizes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +86,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Key</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Size_MB</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cpg0002-jump-scope/source_4/images/2020_10_27_...</td>\n",
+       "      <td>1722374</td>\n",
+       "      <td>1.722374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cpg0002-jump-scope/source_4/images/2020_10_27_...</td>\n",
+       "      <td>7259176</td>\n",
+       "      <td>7.259176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cpg0002-jump-scope/source_4/images/2020_10_27_...</td>\n",
+       "      <td>6734426</td>\n",
+       "      <td>6.734426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cpg0002-jump-scope/source_4/images/2020_10_27_...</td>\n",
+       "      <td>7111214</td>\n",
+       "      <td>7.111214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cpg0002-jump-scope/source_4/images/2020_10_27_...</td>\n",
+       "      <td>7910442</td>\n",
+       "      <td>7.910442</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Key     Size   Size_MB\n",
+       "0  cpg0002-jump-scope/source_4/images/2020_10_27_...  1722374  1.722374\n",
+       "1  cpg0002-jump-scope/source_4/images/2020_10_27_...  7259176  7.259176\n",
+       "2  cpg0002-jump-scope/source_4/images/2020_10_27_...  6734426  6.734426\n",
+       "3  cpg0002-jump-scope/source_4/images/2020_10_27_...  7111214  7.111214\n",
+       "4  cpg0002-jump-scope/source_4/images/2020_10_27_...  7910442  7.910442"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "file_df = pd.read_csv(\"output/jump-scope-image-info-only.csv\")\n",
     "metadata_df = pd.read_csv(\"output/all-profile-metadata.csv\")\n",
@@ -201,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---- Input files: 1521532 -- Found files: 1538785 -- Unaccounted for files -17253 ----\n"
+      "---- Input files: 1521532 -- Found files: 6198976 -- Unaccounted for files -4677444 ----\n"
      ]
     },
     {
@@ -243,112 +318,112 @@
        "      <th>142</th>\n",
        "      <td>9.526377</td>\n",
        "      <td>2.056519</td>\n",
-       "      <td>CPBroadPhenixCBIN11PlaneP1</td>\n",
+       "      <td>CP_Broad_Phenix_C_BIN1_1Plane_P1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143</th>\n",
        "      <td>9.484644</td>\n",
        "      <td>2.025929</td>\n",
-       "      <td>CPBroadPhenixCBIN11PlaneP2</td>\n",
+       "      <td>CP_Broad_Phenix_C_BIN1_1Plane_P2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>144</th>\n",
        "      <td>9.352902</td>\n",
        "      <td>1.995189</td>\n",
-       "      <td>CPBroadPhenixCBIN11PlaneP3</td>\n",
+       "      <td>CP_Broad_Phenix_C_BIN1_1Plane_P3</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>145</th>\n",
        "      <td>9.587195</td>\n",
        "      <td>1.989622</td>\n",
-       "      <td>CPBroadPhenixCBIN11PlaneP4</td>\n",
+       "      <td>CP_Broad_Phenix_C_BIN1_1Plane_P4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>146</th>\n",
        "      <td>9.427739</td>\n",
        "      <td>1.770552</td>\n",
-       "      <td>CPBroadPhenixCBIN1P1</td>\n",
+       "      <td>CP_Broad_Phenix_C_BIN1_P1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>147</th>\n",
        "      <td>9.400030</td>\n",
        "      <td>1.744418</td>\n",
-       "      <td>CPBroadPhenixCBIN1P2</td>\n",
+       "      <td>CP_Broad_Phenix_C_BIN1_P2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>148</th>\n",
        "      <td>9.294915</td>\n",
        "      <td>1.715099</td>\n",
-       "      <td>CPBroadPhenixCBIN1P3</td>\n",
+       "      <td>CP_Broad_Phenix_C_BIN1_P3</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
        "      <td>9.473822</td>\n",
        "      <td>1.716538</td>\n",
-       "      <td>CPBroadPhenixCBIN1P4</td>\n",
+       "      <td>CP_Broad_Phenix_C_BIN1_P4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>150</th>\n",
        "      <td>9.361273</td>\n",
        "      <td>1.410804</td>\n",
-       "      <td>CPBroadPhenixNCBIN11PlaneP1</td>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_1Plane_P1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>151</th>\n",
        "      <td>9.244346</td>\n",
        "      <td>1.354504</td>\n",
-       "      <td>CPBroadPhenixNCBIN11PlaneP2</td>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_1Plane_P2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>152</th>\n",
        "      <td>9.078627</td>\n",
        "      <td>1.285124</td>\n",
-       "      <td>CPBroadPhenixNCBIN11PlaneP3</td>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_1Plane_P3</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>153</th>\n",
        "      <td>9.285376</td>\n",
        "      <td>1.356851</td>\n",
-       "      <td>CPBroadPhenixNCBIN11PlaneP4</td>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_1Plane_P4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>154</th>\n",
        "      <td>9.352244</td>\n",
        "      <td>1.218635</td>\n",
-       "      <td>CPBroadPhenixNCBIN1P1</td>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155</th>\n",
        "      <td>9.264655</td>\n",
        "      <td>1.169530</td>\n",
-       "      <td>CPBroadPhenixNCBIN1P2</td>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156</th>\n",
        "      <td>9.139749</td>\n",
        "      <td>1.114550</td>\n",
-       "      <td>CPBroadPhenixNCBIN1P3</td>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P3</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>157</th>\n",
        "      <td>9.294386</td>\n",
        "      <td>1.171688</td>\n",
-       "      <td>CPBroadPhenixNCBIN1P4</td>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -468,42 +543,42 @@
        "</div>"
       ],
       "text/plain": [
-       "      Size_MB  Size_MB_std          Assay_Plate_Barcode  Binning\n",
-       "142  9.526377     2.056519   CPBroadPhenixCBIN11PlaneP1        1\n",
-       "143  9.484644     2.025929   CPBroadPhenixCBIN11PlaneP2        1\n",
-       "144  9.352902     1.995189   CPBroadPhenixCBIN11PlaneP3        1\n",
-       "145  9.587195     1.989622   CPBroadPhenixCBIN11PlaneP4        1\n",
-       "146  9.427739     1.770552         CPBroadPhenixCBIN1P1        1\n",
-       "147  9.400030     1.744418         CPBroadPhenixCBIN1P2        1\n",
-       "148  9.294915     1.715099         CPBroadPhenixCBIN1P3        1\n",
-       "149  9.473822     1.716538         CPBroadPhenixCBIN1P4        1\n",
-       "150  9.361273     1.410804  CPBroadPhenixNCBIN11PlaneP1        1\n",
-       "151  9.244346     1.354504  CPBroadPhenixNCBIN11PlaneP2        1\n",
-       "152  9.078627     1.285124  CPBroadPhenixNCBIN11PlaneP3        1\n",
-       "153  9.285376     1.356851  CPBroadPhenixNCBIN11PlaneP4        1\n",
-       "154  9.352244     1.218635        CPBroadPhenixNCBIN1P1        1\n",
-       "155  9.264655     1.169530        CPBroadPhenixNCBIN1P2        1\n",
-       "156  9.139749     1.114550        CPBroadPhenixNCBIN1P3        1\n",
-       "157  9.294386     1.171688        CPBroadPhenixNCBIN1P4        1\n",
-       "158  2.527899     0.441258       CPBroadPhenixC1PlaneP1        2\n",
-       "159  2.511724     0.438516       CPBroadPhenixC1PlaneP2        2\n",
-       "160  2.496831     0.432486       CPBroadPhenixC1PlaneP3        2\n",
-       "161  2.539198     0.441607       CPBroadPhenixC1PlaneP4        2\n",
-       "162  2.469309     0.388002             CPBroadPhenixCP1        2\n",
-       "163  2.456927     0.384304             CPBroadPhenixCP2        2\n",
-       "164  2.444871     0.377457             CPBroadPhenixCP3        2\n",
-       "165  2.477545     0.389990             CPBroadPhenixCP4        2\n",
-       "166  2.519742     0.358389      CPBroadPhenixNC1PlaneP1        2\n",
-       "167  2.484223     0.346356      CPBroadPhenixNC1PlaneP2        2\n",
-       "168  2.449872     0.340312      CPBroadPhenixNC1PlaneP3        2\n",
-       "169  2.488858     0.348682      CPBroadPhenixNC1PlaneP4        2\n",
-       "170  2.472901     0.320289            CPBroadPhenixNCP1        2\n",
-       "171  2.446371     0.306500            CPBroadPhenixNCP2        2\n",
-       "172  2.420490     0.298491            CPBroadPhenixNCP3        2\n",
-       "173  2.449473     0.308956            CPBroadPhenixNCP4        2"
+       "      Size_MB  Size_MB_std                Assay_Plate_Barcode  Binning\n",
+       "142  9.526377     2.056519   CP_Broad_Phenix_C_BIN1_1Plane_P1        1\n",
+       "143  9.484644     2.025929   CP_Broad_Phenix_C_BIN1_1Plane_P2        1\n",
+       "144  9.352902     1.995189   CP_Broad_Phenix_C_BIN1_1Plane_P3        1\n",
+       "145  9.587195     1.989622   CP_Broad_Phenix_C_BIN1_1Plane_P4        1\n",
+       "146  9.427739     1.770552          CP_Broad_Phenix_C_BIN1_P1        1\n",
+       "147  9.400030     1.744418          CP_Broad_Phenix_C_BIN1_P2        1\n",
+       "148  9.294915     1.715099          CP_Broad_Phenix_C_BIN1_P3        1\n",
+       "149  9.473822     1.716538          CP_Broad_Phenix_C_BIN1_P4        1\n",
+       "150  9.361273     1.410804  CP_Broad_Phenix_NC_BIN1_1Plane_P1        1\n",
+       "151  9.244346     1.354504  CP_Broad_Phenix_NC_BIN1_1Plane_P2        1\n",
+       "152  9.078627     1.285124  CP_Broad_Phenix_NC_BIN1_1Plane_P3        1\n",
+       "153  9.285376     1.356851  CP_Broad_Phenix_NC_BIN1_1Plane_P4        1\n",
+       "154  9.352244     1.218635         CP_Broad_Phenix_NC_BIN1_P1        1\n",
+       "155  9.264655     1.169530         CP_Broad_Phenix_NC_BIN1_P2        1\n",
+       "156  9.139749     1.114550         CP_Broad_Phenix_NC_BIN1_P3        1\n",
+       "157  9.294386     1.171688         CP_Broad_Phenix_NC_BIN1_P4        1\n",
+       "158  2.527899     0.441258             CPBroadPhenixC1PlaneP1        2\n",
+       "159  2.511724     0.438516             CPBroadPhenixC1PlaneP2        2\n",
+       "160  2.496831     0.432486             CPBroadPhenixC1PlaneP3        2\n",
+       "161  2.539198     0.441607             CPBroadPhenixC1PlaneP4        2\n",
+       "162  2.469309     0.388002                   CPBroadPhenixCP1        2\n",
+       "163  2.456927     0.384304                   CPBroadPhenixCP2        2\n",
+       "164  2.444871     0.377457                   CPBroadPhenixCP3        2\n",
+       "165  2.477545     0.389990                   CPBroadPhenixCP4        2\n",
+       "166  2.519742     0.358389            CPBroadPhenixNC1PlaneP1        2\n",
+       "167  2.484223     0.346356            CPBroadPhenixNC1PlaneP2        2\n",
+       "168  2.449872     0.340312            CPBroadPhenixNC1PlaneP3        2\n",
+       "169  2.488858     0.348682            CPBroadPhenixNC1PlaneP4        2\n",
+       "170  2.472901     0.320289                  CPBroadPhenixNCP1        2\n",
+       "171  2.446371     0.306500                  CPBroadPhenixNCP2        2\n",
+       "172  2.420490     0.298491                  CPBroadPhenixNCP3        2\n",
+       "173  2.449473     0.308956                  CPBroadPhenixNCP4        2"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,18 +589,22 @@
     "    Some filenames contain \"-\" whereas their metadata equivalent contains \"_\" or \" \".\n",
     "    Homogenise everything and remove these characters to allow for better comparison.\n",
     "    \n",
-    "    This function is imperfect as it does not return 100% of the files found in file_df. \n",
-    "    Oh last check, it missed around ~17,300 images that were found in the input filesize_df\n",
+    "    This function is imperfect as it returns more of the files found in file_df. \n",
+    "    Oh last check, it found an extra ~17,300 images that were found in the input filesize_df\n",
     "    The cause for this could be: \n",
     "        1. Missed plate name that was unused in JUMP-scope analysis \n",
     "        2. Unaccounted for images (ie. files that end with .tiff/.nd2 etc) that are not part of \n",
     "            an image set\n",
-    "        3.  Assay_Plate_Barcode to platename mismatch\n",
+    "                This seems likely, since the following calibration subdirectory exists\n",
+    "                \"2020_10_27_Scope1_YokogawaJapan/images/20201020T134356_/Calibration/\"\n",
+    "        3.  Assay_Plate_Barcode to platename mismatch. ie. there is a substring match somewhere\n",
     "\n",
     "    Despite this, the function does accurately get the average file sizes for PE microscopes, which\n",
-    "    is the desired outcome for comparison of binning settings on computation cost\n",
+    "    is the desired outcome for comparison of binning settings on computation cost.\n",
     "    \"\"\"\n",
     "    meta = metadata_df.copy()\n",
+    "    # Another out copy so the output does not have Assay_Plate_Barcode modified\n",
+    "    out_meta = metadata_df.copy()\n",
     "    files = filesize_df.copy()\n",
     "    # Remove inconsistent characters\n",
     "    meta[\"Assay_Plate_Barcode\"] = meta[\"Assay_Plate_Barcode\"].str.replace(\"-|_\", \"\", regex=True)\n",
@@ -535,33 +614,65 @@
     "        \"BRO011701410x\": \"BRO0117014\",\n",
     "        # *20xb plates are ignored since they are removed from metadata_df in the input. \n",
     "        # This is because they are duplicates - the \"b\" refers to analysis included brightfield\n",
-    "        # \"BRO011703320xb\": \"BRO0117033\",\n",
-    "        # \"BRO011705620xb\": \"BRO0117056\",\n",
+    "        \"BRO011703320xb\": \"BRO0117033\",\n",
+    "        \"BRO011705620xb\": \"BRO0117056\",\n",
     "        \"BRO011705620x\": \"BRO0117056\",\n",
     "        \"BRO011703320x\": \"BRO0117033\"\n",
     "        }\n",
     "    # Can use count to report mismatches with input files and files found to match barcode\n",
     "    count = 0\n",
     "    # It isn't necessary to remove siteSub rows, tbh\n",
-    "    for i, row in meta[~meta[\"Batch\"].str.contains(\"siteSub\")].iterrows():\n",
+    "    # for i, row in meta[~meta[\"Batch\"].str.contains(\"siteSub\")].iterrows():\n",
+    "\n",
+    "    for i, row in meta.iterrows():\n",
     "        barcode = row[\"Assay_Plate_Barcode\"]\n",
     "        if barcode in problem_platenames.keys():\n",
     "            barcode = problem_platenames[barcode]\n",
     "        # print(barcode)\n",
     "        subset_df = files[files[\"Key\"].str.contains(barcode)]\n",
-    "        meta.loc[i, \"Size_MB\"] = subset_df[\"Size_MB\"].mean()\n",
-    "        meta.loc[i, \"Size_MB_std\"] = subset_df[\"Size_MB\"].std()\n",
+    "        out_meta.loc[i, \"Size_MB\"] = subset_df[\"Size_MB\"].mean()\n",
+    "        out_meta.loc[i, \"Size_MB_std\"] = subset_df[\"Size_MB\"].std()\n",
     "        # Remove rows that have been matched\n",
     "        # files = files[~files[\"Key\"].str.contains(barcode)]\n",
     "        # print(files.shape)\n",
     "        # print(subset_df.shape[0])\n",
     "        count += subset_df.shape[0]\n",
     "    print(f\"---- Input files: {filesize_df.shape[0]} -- Found files: {count} -- Unaccounted for files {filesize_df.shape[0] - count} ----\")\n",
-    "    return meta #, files\n",
+    "    return out_meta #, files\n",
     "\n",
-    "# get_plate_file_sizes(metadata_df, file_df)\n",
-    "t = get_plate_file_sizes(metadata_subset, file_df)\n",
-    "t[(t[\"Vendor\"].str.contains(\"PE\")) & ~t[\"Batch\"].str.contains(\"siteSub\")][[\"Size_MB\", \"Size_MB_std\", \"Assay_Plate_Barcode\", \"Binning\"]]\n"
+    "metadata = get_plate_file_sizes(metadata_df, file_df)\n",
+    "# metadata = get_plate_file_sizes(metadata_subset, file_df)\n",
+    "metadata[(metadata[\"Vendor\"].str.contains(\"PE\")) & ~metadata[\"Batch\"].str.contains(\"siteSub\")][[\"Size_MB\", \"Size_MB_std\", \"Assay_Plate_Barcode\", \"Binning\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata.to_csv(\"output/all-profile-metadata-INCLUDING-FILESIZES.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpg0002-jump-scope/source_4/images/2020_11_06_Scope1_MolDev/images/Plate2-PCO-6ch-1site-10XPA_Plate20092/Plate2-PCO-6ch-4site-10XPA_A01_s1_w1.TIF'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example for checking a string outside \n",
+    "file_df[file_df[\"Key\"].str.replace(\"-|_| \", \"\", regex=True).str.contains(\"Plate2PCO6ch4site10XPA\")].reset_index().loc[0, \"Key\"]"
    ]
   },
   {
