moving around figures, updating groupings

--- a/notebooks/figures/figure4/figure4.ipynb
+++ b/notebooks/figures/figure4/figure4.ipynb
@@ -540,6 +540,282 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Vendor</th>\n",
+       "      <th>channel_names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>318</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>Nikon</td>\n",
+       "      <td>AGP, DNA, ER, Mito</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Vendor       channel_names\n",
+       "12   Nikon  AGP, DNA, ER, Mito\n",
+       "13   Nikon  AGP, DNA, ER, Mito\n",
+       "14   Nikon  AGP, DNA, ER, Mito\n",
+       "15   Nikon  AGP, DNA, ER, Mito\n",
+       "16   Nikon  AGP, DNA, ER, Mito\n",
+       "17   Nikon  AGP, DNA, ER, Mito\n",
+       "18   Nikon  AGP, DNA, ER, Mito\n",
+       "19   Nikon  AGP, DNA, ER, Mito\n",
+       "20   Nikon  AGP, DNA, ER, Mito\n",
+       "21   Nikon  AGP, DNA, ER, Mito\n",
+       "22   Nikon  AGP, DNA, ER, Mito\n",
+       "23   Nikon  AGP, DNA, ER, Mito\n",
+       "24   Nikon  AGP, DNA, ER, Mito\n",
+       "25   Nikon  AGP, DNA, ER, Mito\n",
+       "120  Nikon  AGP, DNA, ER, Mito\n",
+       "121  Nikon  AGP, DNA, ER, Mito\n",
+       "122  Nikon  AGP, DNA, ER, Mito\n",
+       "123  Nikon  AGP, DNA, ER, Mito\n",
+       "124  Nikon  AGP, DNA, ER, Mito\n",
+       "125  Nikon  AGP, DNA, ER, Mito\n",
+       "218  Nikon  AGP, DNA, ER, Mito\n",
+       "219  Nikon  AGP, DNA, ER, Mito\n",
+       "220  Nikon  AGP, DNA, ER, Mito\n",
+       "221  Nikon  AGP, DNA, ER, Mito\n",
+       "222  Nikon  AGP, DNA, ER, Mito\n",
+       "223  Nikon  AGP, DNA, ER, Mito\n",
+       "316  Nikon  AGP, DNA, ER, Mito\n",
+       "317  Nikon  AGP, DNA, ER, Mito\n",
+       "318  Nikon  AGP, DNA, ER, Mito\n",
+       "319  Nikon  AGP, DNA, ER, Mito\n",
+       "320  Nikon  AGP, DNA, ER, Mito\n",
+       "321  Nikon  AGP, DNA, ER, Mito\n",
+       "342  Nikon  AGP, DNA, ER, Mito\n",
+       "343  Nikon  AGP, DNA, ER, Mito\n",
+       "344  Nikon  AGP, DNA, ER, Mito\n",
+       "345  Nikon  AGP, DNA, ER, Mito\n",
+       "346  Nikon  AGP, DNA, ER, Mito\n",
+       "347  Nikon  AGP, DNA, ER, Mito"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experiment_df[[\"Vendor\", \"channel_names\"]][experiment_df[\"Vendor\"] == \"Nikon\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
