updating siteSub metadata to relfect metadata of original profiles

--- a/data-processing.ipynb
+++ b/data-processing.ipynb
@@ -450,6 +450,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "update_cols = [\n",
+    "    \"Modality\",\n",
+    "    \"Binning\",\n",
+    "    \"Magnification\",\n",
+    "    \"Number_of_channels\",\n",
+    "    \"z_plane\",\n",
+    "    \"BF_Zplanes\",\n",
+    "    \"spinning-disc\",\n",
+    "    \"aperture\",\n",
+    "    \"dry-immersion\",\n",
+    "    \"vs-brightfield\",\n",
+    "    \"simultaneous-excitation\"\n",
+    "]\n",
+    "\n",
+    "def propagate_metadata(source_df, destination_df, metadata_cols):\n",
+    "    \"\"\"\n",
+    "    Propagate metadata information from the original metadata file\n",
+    "    (source_df) to all site subsampled data (destination_df)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    sour_df = source_df.copy()\n",
+    "    dest_df = destination_df.copy()\n",
+    "\n",
+    "    # Wipe all metadata values in the destination_df\n",
+    "    dest_df.loc[:, metadata_cols] = np.nan\n",
+    "\n",
+    "    # Iterate through the DF to have settings added\n",
+    "    for i, row in dest_df.iterrows():\n",
+    "        # Get the unique barcode\n",
+    "        barcode = row[\"Assay_Plate_Barcode\"]\n",
+    "        for col in metadata_cols:\n",
+    "            # For the index in the dest_df, match the row with the source_df based on \n",
+    "            # Assay_Plate_Barcode, then update the value. Multiple rows (ie subsamples) will\n",
+    "            # match with one barcode\n",
+    "            dest_df.loc[i, col] = sour_df[sour_df[\"Assay_Plate_Barcode\"] == barcode][col].values[0]\n",
+    "    \n",
+    "    out_df = pd.concat([sour_df, dest_df])\n",
+    "    int_metadata = [\"Binning\", \"Magnification\", \"Number_of_channels\", \"z_plane\"]\n",
+    "    out_df[int_metadata] = out_df[int_metadata].astype(int)\n",
+    "\n",
+    "    return out_df\n",
+    "\n",
+    "comb = pd.read_csv(\"output/all-profile-metadata.csv\")\n",
+    "df_1 = comb[~comb[\"Batch\"].str.contains(\"siteSub\")]\n",
+    "df_2 = comb[comb[\"Batch\"].str.contains(\"siteSub\")]\n",
+    "out = propagate_metadata(df_1, df_2, update_cols)\n",
+    "\n",
+    "out.to_csv(\"output/all-profile-metadata.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [
