additionally updating metadata

--- a/data-processing.ipynb
+++ b/data-processing.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,17 +492,67 @@
     "            dest_df.loc[i, col] = sour_df[sour_df[\"Assay_Plate_Barcode\"] == barcode][col].values[0]\n",
     "    \n",
     "    out_df = pd.concat([sour_df, dest_df])\n",
-    "    int_metadata = [\"Binning\", \"Magnification\", \"Number_of_channels\", \"z_plane\"]\n",
-    "    out_df[int_metadata] = out_df[int_metadata].astype(int)\n",
-    "\n",
+    "    # Columns that contain data that should be represented as type int\n",
+    "    int_metadata = [\"Binning\", \"Magnification\", \"Number_of_channels\", \"z_plane\", \"BF_Zplanes\"]\n",
+    "    # Int64 to allow for nullable integers\n",
+    "    # Columns that contain NaN will be reconverted to float when loaded again, without some\n",
+    "    # custom loading\n",
+    "    out_df[int_metadata] = out_df[int_metadata].astype(pd.Int64Dtype())\n",
     "    return out_df\n",
     "\n",
     "comb = pd.read_csv(\"output/all-profile-metadata.csv\")\n",
+    "comb = comb.drop(comb.columns[comb.columns.str.contains('unnamed',case = False)],axis=1) # drop pesky unnamed columns if you forgot index=False\n",
     "df_1 = comb[~comb[\"Batch\"].str.contains(\"siteSub\")]\n",
     "df_2 = comb[comb[\"Batch\"].str.contains(\"siteSub\")]\n",
-    "out = propagate_metadata(df_1, df_2, update_cols)\n",
+    "out_df = propagate_metadata(df_1, df_2, update_cols)\n",
     "\n",
-    "out.to_csv(\"output/all-profile-metadata.csv\")"
+    "out_df.to_csv(\"output/all-profile-metadata.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_metadata(new_metdata_df, old_metadata_df, update_cols):\n",
+    "    \"\"\"\n",
+    "    Update the metadata of an old DF for a given set of columns\n",
+    "\n",
+    "    Keep the original values of non-update columns\n",
+    "\n",
+    "    Used for keeping percent replicating, but updating metadata\n",
+    "    \"\"\"\n",
+    "    new_df = new_metdata_df.copy()\n",
+    "    old_df = old_metadata_df.copy()\n",
+    "\n",
+    "    merge_cols = [\"Vendor\", \"Batch\", \"Assay_Plate_Barcode\"]\n",
+    "\n",
+    "    # Drop the old cols to be updated\n",
+    "    old_df = old_df.drop(update_cols, axis=1)\n",
+    "\n",
+    "    out_df = pd.merge(new_df, old_df, on=merge_cols)\n",
+    "    return out_df\n",
+    "\n",
+    "\n",
+    "df1 = pd.read_csv(\"output/all-profile-metadata.csv\")\n",
+    "df2 = pd.read_csv(\"checkpoints/match_rep_df.csv\")\n",
+    "update_cols = [\n",
+    "    \"Modality\",\n",
+    "    \"Binning\",\n",
+    "    \"Magnification\",\n",
+    "    \"Number_of_channels\",\n",
+    "    \"z_plane\",\n",
+    "    \"BF_Zplanes\",\n",
+    "    \"spinning-disc\",\n",
+    "    \"aperture\",\n",
+    "    \"dry-immersion\",\n",
+    "    \"vs-brightfield\",\n",
+    "    \"simultaneous-excitation\"\n",
+    "]\n",
+    "\n",
+    "out = update_metadata(df1, df2, update_cols)\n",
+    "out.to_csv(\"test.csv\", index=False)"
    ]
   },
   {
