updating the update_metdata function to properly merge new and old metadata

--- a/data-processing.ipynb
+++ b/data-processing.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,11 +511,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Vendor', 'Batch', 'Plate_Map_Name', 'Assay_Plate_Barcode', 'Modality',\n",
+       "       'Images_per_well', 'Sites-SubSampled', 'Binning', 'Magnification',\n",
+       "       'Number_of_channels', 'z_plane', 'BF_Zplanes', 'spinning-disc',\n",
+       "       'aperture', 'dry-immersion', 'vs-brightfield',\n",
+       "       'simultaneous-excitation', 'sites', 'Size_MB', 'Size_MB_std',\n",
+       "       'channel_names', 'brightfield_z_plane_used', 'feature_channels_found'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def update_metadata(new_metdata_df, old_metadata_df, update_cols):\n",
+    "out_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'spinning-disc', 'sites', 'Number_of_channels', 'BF_Zplanes', 'simultaneous-excitation', 'Images_per_well', 'Size_MB', 'Size_MB_std', 'Binning', 'Sites-SubSampled', 'vs-brightfield', 'Plate_Map_Name', 'z_plane', 'aperture', 'Magnification', 'dry-immersion', 'Modality'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def update_metadata(new_metdata_df, old_metadata_df, merge_cols):\n",
     "    \"\"\"\n",
     "    Update the metadata of an old DF for a given set of columns\n",
     "\n",
@@ -525,11 +559,15 @@
     "    \"\"\"\n",
     "    new_df = new_metdata_df.copy()\n",
     "    old_df = old_metadata_df.copy()\n",
-    "\n",
-    "    merge_cols = [\"Vendor\", \"Batch\", \"Assay_Plate_Barcode\"]\n",
+    "    # Drop any column from the old_df that is found in the new one, excluding\n",
+    "    new_cols = set(new_df.loc[:, ~new_df.columns.str.contains(\"|\".join(merge_cols))].columns)\n",
+    "    old_cols = set(old_df.loc[:, ~old_df.columns.str.contains(\"|\".join(merge_cols))].columns)\n",
+    "    drop_cols = new_cols.intersection(old_cols)\n",
+    "    # old_df = old_df.drop(old_df.loc[:,~new_df.columns.str.contains(\"|\".join(merge_cols))], axis=1)\n",
+    "    old_df = old_df.drop(drop_cols, axis=1)\n",
     "\n",
     "    # Drop the old cols to be updated\n",
-    "    old_df = old_df.drop(update_cols, axis=1)\n",
+    "    # old_df = old_df.drop(update_cols, axis=1)\n",
     "\n",
     "    out_df = pd.merge(new_df, old_df, on=merge_cols)\n",
     "    return out_df\n",
@@ -537,22 +575,9 @@
     "\n",
     "df1 = pd.read_csv(\"output/all-profile-metadata.csv\")\n",
     "df2 = pd.read_csv(\"checkpoints/match_rep_df.csv\")\n",
-    "update_cols = [\n",
-    "    \"Modality\",\n",
-    "    \"Binning\",\n",
-    "    \"Magnification\",\n",
-    "    \"Number_of_channels\",\n",
-    "    \"z_plane\",\n",
-    "    \"BF_Zplanes\",\n",
-    "    \"spinning-disc\",\n",
-    "    \"aperture\",\n",
-    "    \"dry-immersion\",\n",
-    "    \"vs-brightfield\",\n",
-    "    \"simultaneous-excitation\"\n",
-    "]\n",
-    "\n",
-    "out = update_metadata(df1, df2, update_cols)\n",
-    "out.to_csv(\"test.csv\", index=False)"
+    "out = update_metadata(df1, df2, [\"Vendor\", \"Batch\", \"Assay_Plate_Barcode\"])\n",
+    "out.columns\n",
+    "out.to_csv(\"checkpoints/match_rep_df.csv\", index=False)"
    ]
   },
   {
